--- a/src/app/components/todos/todos.component.html
+++ b/src/app/components/todos/todos.component.html
@@ -1,6 +1,3 @@
-<ul *ngFor="let todo of todos">
-  <li>
-    {{todo.title}}
-  </li>
-</ul>
-<app-todo-item *ngFor="let todo of todos" [todo]="todo"></app-todo-item>
+<app-todo-item *ngFor="let todo of todos" [todo]="todo" (deleteTodo)="deleteTodo($event)">
+
+</app-todo-item>
